--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:layout_gravity="center">
 
         <fragment
             android:id="@+id/fragment3"
