--- a/app/src/main/res/layout/fragment_movie_details_fragnent.xml
+++ b/app/src/main/res/layout/fragment_movie_details_fragnent.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieDetailsFragnent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingTop="30px">
 
 
     <!-- TODO: Update blank fragment layout -->
@@ -20,7 +21,8 @@
         <ImageView
             android:id="@+id/ivposter"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:src="@drawable/captura" />
     </LinearLayout>
 
@@ -34,25 +36,29 @@
         <TextView
             android:id="@+id/tvname"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvyear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvtype"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvid"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:text="TextView" />
     </LinearLayout>
 </LinearLayout>
